--- a/recipes/lava_cake.html
+++ b/recipes/lava_cake.html
@@ -7,7 +7,7 @@
 
     <body>
         <h1>Lava Cake</h1>
-        <img src="./image/lava.jpg">
+        <img src="./image/lava.jpg" height="300" width="390">
         <h2>Description</h2>
         <p>The sweet comfort of chocolate gets enhanced with a touch of warmth through this fabulous recipe 
         of a fluffy chocolate cake as its outter shell. This is the delicious chocloate lava cake!</p>
